<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BLogin"
    android:gravity="center"
    android:background="@drawable/planetearth">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imco"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/rocketlogo"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="0dp" />

        <EditText
            android:id="@+id/etuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#FFFFFF"
            android:textColorHint="#FF216FED"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:hint="@string/pwd_hint"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#FFFFFF"
            android:textColorHint="#FF216FED"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btngo"
            style="@style/btn_login"
            android:layout_marginTop="50dp"
            android:background="#FF216FED"
            android:text="@string/botonlogin"
            android:textColor="@color/blanco"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>